Reformatting by IDE